add temporary interface

--- a/index.html
+++ b/index.html
@@ -8,7 +8,36 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="largeContainer"></div>
-    <script src="script.js"></script>
+    <header>
+        <h1>Etch-a-Sketch</h1>
+        <div class="settings">
+            <div class="slider">
+                <input type="range" min="1" max="100" value="16" class="slider">
+            </div>
+            <button class="reset">Reset</button>
+        </div>
+    </header>
+    <main>
+        <div class="largeContainer"></div>
+        <script src="script.js"></script>
+    </main>
+    <footer>
+        <p>All right reserved 2023</p>
+    </footer>
 </body>
 </html>
+
+<!-- 
+
+    <div class="entourage">
+        <header>
+            <h1>Etch-a-Sketch</h1>
+            <div class="panel">
+                <div class="sliderContainer">
+                    <input type="range" min="1" max="100" value="16" class="slider">
+                </div>
+                <button>Reset</button>
+            </div>
+        </header>
+
+-->
