--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header>
         <h1>Etch-a-Sketch</h1>
         <div class="settings">
-            <div class="slider">
-                <input type="range" min="1" max="100" value="16" class="slider">
+            <div class="sliderContainer">
+                <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                <p><span id="demo"></span>px</p>
             </div>
             <button class="reset">Reset</button>
         </div>
