add changing background (no support for eraser yet)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <div class="colorContainer">
                 <input class="color" type="color" id="head" name="head" value="#000000">
             </div>
+            <div class="colorBackgroundContainer">
+                <input class="colorBackground" type="color" id="head" name="head" value="#FFFFFF">
+            </div>
             <button class="eraser">Eraser</button>
             <button class="reset">Reset</button>
         </div>
