--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Etch-a-Sketch</h1>
         <div class="settings">
             <div class="sliderContainer">
-                <input type="range" min="1" max="50" value="16" class="slider">
+                <input type="range" class="slider" value="16" min="1" max="100"></input>
                 <p><span class="px"></span>px</p>
             </div>
             <div class="colorContainer">
