add new interface layout

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <div class="optionName">Color</div>
                     <input class="color" type="color" id="head" name="head" value="#000000">
                     <div class="buttonsContainer">
-                        <button class="paintCustomButton">Paint Custom</button>
-                        <button class="paintRandomButton">Paint Random</button>
+                        <button class="paintCustomButton">Custom</button>
+                        <button class="paintRandomButton">Random</button>
                     </div>
                 </div>
                 <div class="eraserContainer">
