implement orange design and upper settings panel no longer shrinks

--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 </head>
 <body>
     <header>
-        <h1>Etch-a-Sketch</h1>
+        <h1>&nbspEtch-a-Sketch&nbsp</h1>
     </header>
     <main>
         <div class="paintContainer">
             <div class="settings-top">
                 <div class="colorContainer">
-                    <div class="optionName">Color</div>
+                    <div class="optionName">color</div>
                     <input class="color" type="color" id="head" name="head" value="#000000">
                     <div class="buttonsContainer">
-                        <button class="paintCustomButton">Custom</button>
-                        <button class="paintRandomButton">Random</button>
+                        <button class="paintCustomButton">custom</button>
+                        <button class="paintRandomButton">random</button>
                     </div>
                 </div>
                 <div class="eraserContainer">
-                    <div class="optionName">Eraser</div>
-                    <button class="eraser">Eraser</button>
+                    <div class="optionName">eraser</div>
+                    <button class="eraser"></button>
                 </div>
                 <div class="backgroundColorContainer">
-                    <div class="optionName">Background color</div>
+                    <div class="optionName">background color</div>
                     <input class="colorBackground" type="color" id="head" name="head" value="#FFFFFF">
                 </div>
             </div>
@@ -39,7 +39,7 @@
                     <p><span class="px"></span>px</p>
                 </div>
                 <div class="resetContainer">
-                    <button class="reset">Reset</button>
+                    <button class="reset">reset</button>
                 </div>
             </div>
         </div>
